--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -73,6 +73,7 @@ set(DATA_DIR "${CMAKE_CURRENT_SOURCE_DIR}/data")
 
 inc(parsing)
 
+inc(add-exec)
 inc(add-rpn)
 inc(avg)
 inc(cat)
@@ -80,7 +81,6 @@ inc(concat)
 inc(count)
 inc(cut)
 inc(exec)
-inc(exec-add)
 inc(grep)
 inc(grep-rpn)
 inc(groups)
