--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,13 +123,14 @@ function(build_tool name)
 		DESTINATION ${CMAKE_INSTALL_BINDIR}/)
 endfunction()
 
+build_tool(csv-add-exec		src/add-exec.c)
+build_tool(csv-add-rpn		src/add-rpn.c)
 build_tool(csv-avg		src/avg.c)
 build_tool(csv-cat		src/cat.c)
 build_tool(csv-concat		src/concat.c)
 build_tool(csv-count		src/count.c)
 build_tool(csv-cut		src/cut.c)
 build_tool(csv-exec		src/exec.c)
-build_tool(csv-exec-add		src/exec-add.c)
 build_tool(csv-grep		src/grep.c)
 build_tool(csv-grep-rpn		src/grep-rpn.c)
 build_tool(csv-groups		src/groups.c src/usr-grp.c src/merge_utils.c)
@@ -141,7 +142,6 @@ build_tool(csv-min		src/min.c)
 build_tool(csv-max		src/max.c)
 build_tool(csv-merge		src/merge.c)
 build_tool(csv-replace		src/replace.c)
-build_tool(csv-add-rpn		src/add-rpn.c)
 build_tool(csv-sort		src/sort.c)
 build_tool(csv-split		src/split.c)
 build_tool(csv-substring	src/substring.c)
