--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,11 +123,11 @@ function(build_tool name)
 		DESTINATION ${CMAKE_INSTALL_BINDIR}/)
 endfunction()
 
+build_tool(csv-add-concat	src/add-concat.c)
 build_tool(csv-add-exec		src/add-exec.c)
 build_tool(csv-add-rpn		src/add-rpn.c)
 build_tool(csv-avg		src/avg.c)
 build_tool(csv-cat		src/cat.c)
-build_tool(csv-concat		src/concat.c)
 build_tool(csv-count		src/count.c)
 build_tool(csv-cut		src/cut.c)
 build_tool(csv-exec		src/exec.c)
