--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -75,6 +75,7 @@ inc(parsing)
 
 inc(add-concat)
 inc(add-exec)
+inc(add-replace)
 inc(add-rpn)
 inc(avg)
 inc(cat)
@@ -93,7 +94,6 @@ inc(merge)
 inc(min)
 inc(netstat)
 inc(ps)
-inc(replace)
 inc(show)
 inc(sort)
 inc(split)
