--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,6 +125,7 @@ endfunction()
 
 build_tool(csv-add-concat	src/add-concat.c)
 build_tool(csv-add-exec		src/add-exec.c)
+build_tool(csv-add-replace	src/add-replace.c)
 build_tool(csv-add-rpn		src/add-rpn.c)
 build_tool(csv-avg		src/avg.c)
 build_tool(csv-cat		src/cat.c)
@@ -141,7 +142,6 @@ build_tool(csv-ls		src/ls.c src/usr-grp-query.c src/merge_utils.c)
 build_tool(csv-min		src/min.c)
 build_tool(csv-max		src/max.c)
 build_tool(csv-merge		src/merge.c)
-build_tool(csv-replace		src/replace.c)
 build_tool(csv-sort		src/sort.c)
 build_tool(csv-split		src/split.c)
 build_tool(csv-substring	src/substring.c)
