--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -77,6 +77,7 @@ inc(add-concat)
 inc(add-exec)
 inc(add-replace)
 inc(add-rpn)
+inc(add-split)
 inc(avg)
 inc(cat)
 inc(count)
@@ -96,7 +97,6 @@ inc(netstat)
 inc(ps)
 inc(show)
 inc(sort)
-inc(split)
 inc(sql)
 inc(sqlite)
 inc(substring)
