--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,7 @@ build_tool(csv-add-exec		src/add-exec.c)
 build_tool(csv-add-replace	src/add-replace.c)
 build_tool(csv-add-rpn		src/add-rpn.c)
 build_tool(csv-add-split	src/add-split.c)
+build_tool(csv-add-substring	src/add-substring.c)
 build_tool(csv-avg		src/avg.c)
 build_tool(csv-cat		src/cat.c)
 build_tool(csv-count		src/count.c)
@@ -144,7 +145,6 @@ build_tool(csv-min		src/min.c)
 build_tool(csv-max		src/max.c)
 build_tool(csv-merge		src/merge.c)
 build_tool(csv-sort		src/sort.c)
-build_tool(csv-substring	src/substring.c)
 build_tool(csv-sum		src/sum.c)
 build_tool(csv-tac		src/tac.c)
 build_tool(csv-tail		src/tail.c)
