--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -78,6 +78,7 @@ inc(add-exec)
 inc(add-replace)
 inc(add-rpn)
 inc(add-split)
+inc(add-substring)
 inc(avg)
 inc(cat)
 inc(count)
@@ -99,7 +100,6 @@ inc(show)
 inc(sort)
 inc(sql)
 inc(sqlite)
-inc(substring)
 inc(sum)
 inc(tac)
 inc(tail)
