env: add new tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,6 +134,7 @@ build_tool(csv-avg		src/avg.c)
 build_tool(csv-cat		src/cat.c)
 build_tool(csv-count		src/count.c)
 build_tool(csv-cut		src/cut.c)
+build_tool(csv-env		src/env.c src/merge_utils.c)
 build_tool(csv-exec		src/exec.c)
 build_tool(csv-grep		src/grep.c)
 build_tool(csv-grep-rpn		src/grep-rpn.c)
