--- a/src/sql.y.in
+++ b/src/sql.y.in
@@ -53,7 +53,7 @@ dbg_printf(const char *format, ...)
 %%
 
 prog:
-	query
+	@PROG@
 
 value: STRING     { dbg_printf("BISON: string '%s'\n", $1); sql_stack_push_string($1); }
 	| NUMBER  { dbg_printf("BISON: number '%d'\n", $1); sql_stack_push_llong($1); }
