--- a/src/sql.y.in
+++ b/src/sql.y.in
@@ -26,7 +26,7 @@ dbg_printf(const char *format, ...)
 %token SELECT AS FROM WHERE STRING NUMBER COMMA LITERAL EQ NE LT GT LE GE
 %token OR AND XOR NOT LPAREN RPAREN ADD SUB MUL DIV MOD CONCAT IF
 %token BIT_OR BIT_XOR BIT_AND BIT_NEG BIT_LSHIFT BIT_RSHIFT OTHER
-%token LENGTH SUBSTR LIKE FMT_HEX FMT_OCT FMT_DEC FMT_BIN
+%token LENGTH SUBSTR LIKE TOSTRING
 
 %type <name> STRING
 %type <number> NUMBER
@@ -103,10 +103,8 @@ expr:     LPAREN expr RPAREN
 	| SUBSTR LPAREN expr COMMA expr RPAREN { sql_stack_push_llong(LLONG_MAX); sql_stack_push_op(RPN_SUBSTR); }
 	| LENGTH LPAREN expr RPAREN	{ sql_stack_push_op(RPN_STRLEN); }
 	| IF LPAREN expr COMMA expr COMMA expr	RPAREN { sql_stack_push_op(RPN_IF); }
-	| FMT_DEC LPAREN expr RPAREN	{ sql_stack_push_llong(10); sql_stack_push_op(RPN_TOSTRING); }
-	| FMT_HEX LPAREN expr RPAREN	{ sql_stack_push_llong(16); sql_stack_push_op(RPN_TOSTRING); }
-	| FMT_OCT LPAREN expr RPAREN	{ sql_stack_push_llong(8); sql_stack_push_op(RPN_TOSTRING); }
-	| FMT_BIN LPAREN expr RPAREN	{ sql_stack_push_llong(2); sql_stack_push_op(RPN_TOSTRING); }
+	| TOSTRING LPAREN expr COMMA expr RPAREN { sql_stack_push_op(RPN_TOSTRING); }
+	| TOSTRING LPAREN expr RPAREN { sql_stack_push_llong(10); sql_stack_push_op(RPN_TOSTRING); }
 	| expr LIKE expr		{ sql_stack_push_op(RPN_LIKE); }
 	| LIKE LPAREN expr COMMA expr RPAREN	{ sql_stack_push_op(RPN_LIKE); }
 
