--- a/src/sql.y.in
+++ b/src/sql.y.in
@@ -26,7 +26,7 @@ dbg_printf(const char *format, ...)
 %token SELECT AS FROM WHERE STRING NUMBER COMMA LITERAL EQ NE LT GT LE GE
 %token OR AND XOR NOT LPAREN RPAREN ADD SUB MUL DIV MOD CONCAT IF
 %token BIT_OR BIT_XOR BIT_AND BIT_NEG BIT_LSHIFT BIT_RSHIFT OTHER
-%token LENGTH SUBSTR LIKE TOSTRING
+%token LENGTH SUBSTR LIKE TOSTRING TOINT
 
 %type <name> STRING
 %type <number> NUMBER
@@ -105,6 +105,8 @@ expr:     LPAREN expr RPAREN
 	| IF LPAREN expr COMMA expr COMMA expr	RPAREN { sql_stack_push_op(RPN_IF); }
 	| TOSTRING LPAREN expr COMMA expr RPAREN { sql_stack_push_op(RPN_TOSTRING); }
 	| TOSTRING LPAREN expr RPAREN { sql_stack_push_llong(10); sql_stack_push_op(RPN_TOSTRING); }
+	| TOINT LPAREN expr COMMA expr RPAREN { sql_stack_push_op(RPN_TOINT); }
+	| TOINT LPAREN expr RPAREN { sql_stack_push_llong(10); sql_stack_push_op(RPN_TOINT); }
 	| expr LIKE expr		{ sql_stack_push_op(RPN_LIKE); }
 	| LIKE LPAREN expr COMMA expr RPAREN	{ sql_stack_push_op(RPN_LIKE); }
 
