--- a/src/sql.y.in
+++ b/src/sql.y.in
@@ -64,13 +64,10 @@ column:
 	| expr AS LITERAL		{ sql_named_column_done($3); }
 	| expr AS STRING		{ sql_named_column_done($3); }
 
-columns-exprs:
-	column
-	| columns-exprs COMMA column
-
 columns:
 	MUL			{ sql_all_columns(); }
-	| columns-exprs
+	| column
+	| columns COMMA column
 
 table: STRING { dbg_printf("BISON: table '%s'\n", $1); sql_from($1); }
 
