--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,8 +113,8 @@ if(COVERAGE)
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage")
 endif()
 
-add_library(csvshared STATIC src/parse.c src/utils.c)
-add_library(csvrpn STATIC src/rpn_eval.c src/rpn_parse.c)
+add_library(csvshared STATIC src/parse.c src/utils.c src/utils_glibc.c)
+add_library(csvrpn STATIC src/rpn_eval.c src/rpn_parse.c src/utils_glibc.c)
 
 function(build_tool name)
 	add_executable(${name} ${ARGN})
