rpn: cache compiled regex

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,7 +114,7 @@ if(COVERAGE)
 endif()
 
 add_library(csvshared STATIC src/parse.c src/ht_posix.c src/ht_glibc.c src/utils.c src/utils_glibc.c)
-add_library(csvrpn STATIC src/rpn_eval.c src/rpn_parse.c)
+add_library(csvrpn STATIC src/rpn_eval.c src/rpn_parse.c src/regex_cache.c)
 
 function(build_tool name)
 	add_executable(${name} ${ARGN})
