--- a/src/sql.y.in
+++ b/src/sql.y.in
@@ -27,6 +27,7 @@ dbg_printf(const char *format, ...)
 %token OR AND XOR NOT LPAREN RPAREN ADD SUB MUL DIV MOD CONCAT IF
 %token BIT_OR BIT_XOR BIT_AND BIT_NEG BIT_LSHIFT BIT_RSHIFT OTHER
 %token LENGTH SUBSTR LIKE TOSTRING TOINT REPLACE REPLACE_BRE REPLACE_ERE
+%token MATCHES_BRE MATCHES_ERE
 
 %type <name> STRING
 %type <number> NUMBER
@@ -110,6 +111,10 @@ expr:     LPAREN expr RPAREN
 	| REPLACE_BRE LPAREN expr COMMA expr COMMA expr RPAREN { sql_stack_push_llong(1); sql_stack_push_op(RPN_REPLACE_BRE); }
 	| REPLACE_ERE LPAREN expr COMMA expr COMMA expr COMMA expr RPAREN { sql_stack_push_op(RPN_REPLACE_ERE); }
 	| REPLACE_ERE LPAREN expr COMMA expr COMMA expr RPAREN { sql_stack_push_llong(1); sql_stack_push_op(RPN_REPLACE_ERE); }
+	| MATCHES_BRE LPAREN expr COMMA expr COMMA expr RPAREN { sql_stack_push_op(RPN_MATCHES_BRE); }
+	| MATCHES_BRE LPAREN expr COMMA expr RPAREN { sql_stack_push_llong(1); sql_stack_push_op(RPN_MATCHES_BRE); }
+	| MATCHES_ERE LPAREN expr COMMA expr COMMA expr RPAREN { sql_stack_push_op(RPN_MATCHES_ERE); }
+	| MATCHES_ERE LPAREN expr COMMA expr RPAREN { sql_stack_push_llong(1); sql_stack_push_op(RPN_MATCHES_ERE); }
 	| expr LIKE expr		{ sql_stack_push_op(RPN_LIKE); }
 	| LIKE LPAREN expr COMMA expr RPAREN	{ sql_stack_push_op(RPN_LIKE); }
 
