--- a/src/sql.y.in
+++ b/src/sql.y.in
@@ -27,7 +27,7 @@ dbg_printf(const char *format, ...)
 %token OR AND XOR NOT LPAREN RPAREN ADD SUB MUL DIV MOD CONCAT IF
 %token BIT_OR BIT_XOR BIT_AND BIT_NEG BIT_LSHIFT BIT_RSHIFT OTHER
 %token LENGTH SUBSTR LIKE TOSTRING TOINT REPLACE REPLACE_BRE REPLACE_ERE
-%token MATCHES_BRE MATCHES_ERE
+%token MATCHES_BRE MATCHES_ERE NEXT
 
 %type <name> STRING
 %type <number> NUMBER
@@ -115,6 +115,8 @@ expr:     LPAREN expr RPAREN
 	| MATCHES_BRE LPAREN expr COMMA expr RPAREN { sql_stack_push_llong(1); sql_stack_push_op(RPN_MATCHES_BRE); }
 	| MATCHES_ERE LPAREN expr COMMA expr COMMA expr RPAREN { sql_stack_push_op(RPN_MATCHES_ERE); }
 	| MATCHES_ERE LPAREN expr COMMA expr RPAREN { sql_stack_push_llong(1); sql_stack_push_op(RPN_MATCHES_ERE); }
+	| NEXT LPAREN expr RPAREN { sql_stack_push_op(RPN_NEXT); }
+	| NEXT LPAREN RPAREN { sql_stack_push_literal(xstrdup_nofail("")); sql_stack_push_op(RPN_NEXT); }
 	| expr LIKE expr		{ sql_stack_push_op(RPN_LIKE); }
 	| LIKE LPAREN expr COMMA expr RPAREN	{ sql_stack_push_op(RPN_LIKE); }
 
