doc: add man page stubs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -299,11 +299,54 @@ if(PANDOC)
 
 	gen_doc(nix-tools 7)
 
+	gen1_doc(add-concat)
+	gen1_doc(add-exec)
+	gen1_doc(add-replace)
+	gen1_doc(add-rev)
+	gen1_doc(add-rpn)
+	gen1_doc(add-split)
+if (BISON_FOUND AND FLEX_FOUND)
+	gen1_doc(add-sql)
+endif()
+	gen1_doc(add-substring)
+	gen1_doc(avg)
 	gen1_doc(cat)
+	gen1_doc(count)
+	gen1_doc(cut)
+	gen1_doc(env)
+	gen1_doc(exec)
+	gen1_doc(grep)
+	gen1_doc(grep-rpn)
+if (BISON_FOUND AND FLEX_FOUND)
+	gen1_doc(grep-sql)
+endif()
+	gen1_doc(group-members)
+	gen1_doc(groups)
 	gen1_doc(head)
+	gen1_doc(header)
+	gen1_doc(ls)
+	gen1_doc(max)
+	gen1_doc(merge)
+	gen1_doc(min)
+if(LIBMNL_FOUND)
+	gen1_doc(netstat)
+endif()
+if(LIBPROCPS_FOUND)
+	gen1_doc(ps)
+endif()
 	gen1_doc(show)
+	gen1_doc(sort)
+if (BISON_FOUND AND FLEX_FOUND)
+	gen1_doc(sql)
+endif()
+if(SQLITE3_FOUND)
+	gen1_doc(sqlite)
+endif()
+	gen1_doc(sum)
 	gen1_doc(tac)
 	gen1_doc(tail)
+	gen1_doc(uniq)
+	gen1_doc(users)
 endif()
 
 option(TEST_UNDER_MEMCHECK "Run tests under Valgrind memcheck" OFF)
