--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,13 +71,13 @@ if(NOT LIBPROCPS_FOUND)
 endif()
 
 if(PKG_CONFIG_FOUND)
-	pkg_check_modules(NCURSES ncurses)
+	pkg_check_modules(NCURSESW ncursesw)
 else()
-	find_package(NCURSES)
+	find_package(NCURSESW)
 endif()
 
-if(NOT NCURSES_FOUND)
-	message(WARNING "ncurses not found. csv-show won't support curses UI.")
+if(NOT NCURSESW_FOUND)
+	message(WARNING "ncursesw not found. csv-show won't support curses UI.")
 endif()
 
 if(PKG_CONFIG_FOUND)
@@ -156,23 +156,23 @@ build_tool(csv-users		src/users.c src/usr-grp.c src/merge_utils.c)
 target_link_libraries(csv-add-rpn	csvrpn)
 target_link_libraries(csv-grep-rpn	csvrpn)
 
-if(NCURSES_FOUND)
+if(NCURSESW_FOUND)
 	if(${CMAKE_VERSION} VERSION_LESS "3.13.0")
-		link_directories(${NCURSES_LIBRARY_DIRS})
+		link_directories(${NCURSESW_LIBRARY_DIRS})
 	endif()
 
 	build_tool(csv-show src/show.c)
-	target_compile_definitions(csv-show PRIVATE NCURSES_ENABLED)
+	target_compile_definitions(csv-show PRIVATE NCURSESW_ENABLED)
 
-	if (NCURSES_INCLUDE_DIRS)
-		target_include_directories(csv-show PRIVATE ${NCURSES_INCLUDE_DIRS})
+	if (NCURSESW_INCLUDE_DIRS)
+		target_include_directories(csv-show PRIVATE ${NCURSESW_INCLUDE_DIRS})
 	endif()
 
 	if(NOT ${CMAKE_VERSION} VERSION_LESS "3.13.0")
-		target_link_directories(csv-show PRIVATE ${NCURSES_LIBRARY_DIRS})
+		target_link_directories(csv-show PRIVATE ${NCURSESW_LIBRARY_DIRS})
 	endif()
 
-	target_link_libraries(csv-show ${NCURSES_LIBRARIES})
+	target_link_libraries(csv-show ${NCURSESW_LIBRARIES})
 else()
 	build_tool(csv-show src/show.c)
 endif()
