--- a/src/sql.y.in
+++ b/src/sql.y.in
@@ -27,7 +27,7 @@ dbg_printf(const char *format, ...)
 %token OR AND XOR NOT LPAREN RPAREN ADD SUB MUL DIV MOD CONCAT IF
 %token BIT_OR BIT_XOR BIT_AND BIT_NEG BIT_LSHIFT BIT_RSHIFT OTHER
 %token LENGTH SUBSTR LIKE TOSTRING TOINT REPLACE REPLACE_BRE REPLACE_ERE
-%token MATCHES_BRE MATCHES_ERE NEXT
+%token MATCHES_BRE MATCHES_ERE NEXT ORDER BY ASC DESC
 
 %type <name> STRING
 %type <number> NUMBER
@@ -133,11 +133,26 @@ where:
 	condition	{ dbg_printf("BISON: CONDITION\n"); sql_end_of_conditions(); }
 	|		/* nothing, where is optional */
 
+order_by_expr:
+	expr		{ sql_order_by_expr_done(true); }
+	| expr ASC	{ sql_order_by_expr_done(true); }
+	| expr DESC	{ sql_order_by_expr_done(false); }
+
+order_by_exprs:
+	order_by_expr
+	| order_by_exprs COMMA order_by_expr
+
+order_by:
+	ORDER BY	{ dbg_printf("BISON: ORDER BY\n"); sql_order_by(); }
+	order_by_exprs
+	|		/* nothing, order by is optional */
+
 query:
 	SELECT		{ dbg_printf("BISON: SELECT\n"); }
 	columns		{ dbg_printf("BISON: COLUMNS\n"); }
 	from
 	where
+	order_by
 
 %%
 
