Resolve some of the unused parameter warnings.

--- a/src/sql.y.in
+++ b/src/sql.y.in
@@ -18,6 +18,8 @@ dbg_printf(const char *format, ...)
 	va_start(ap, format);
 	vprintf(format, ap);
 	va_end(ap);
+#else
+	UNUSED(format);
 #endif
 }
 
