Fix detection of libfl.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,8 +203,20 @@ endif()
 
 find_package(BISON)
 find_package(FLEX)
+if(PKG_CONFIG_FOUND)
+	pkg_check_modules(LIBFL libfl)
+else()
+	find_package(LIBFL)
+endif()
 
-if (BISON_FOUND AND FLEX_FOUND)
+if (BISON_FOUND AND FLEX_FOUND AND LIBFL_FOUND)
+	set(BUILD_SQL 1)
+else()
+	set(BUILD_SQL 0)
+	message(WARNING "bison, flex or libfl not found. csv-sql, csv-grep-sql and csv-add-sql won't be built.")
+endif()
+
+if (BUILD_SQL)
 	set(PROG query)
 	configure_file(${CMAKE_SOURCE_DIR}/src/sql.y.in ${CMAKE_CURRENT_BINARY_DIR}/sql.y)
 	set(PROG condition)
@@ -236,15 +248,13 @@ if (BISON_FOUND AND FLEX_FOUND)
 	target_include_directories(csv-grep-sql PRIVATE src)
 	target_include_directories(csv-add-sql PRIVATE src)
 
-	target_link_libraries(csv-sql ${FLEX_LIBRARIES})
-	target_link_libraries(csv-grep-sql ${FLEX_LIBRARIES})
-	target_link_libraries(csv-add-sql ${FLEX_LIBRARIES})
+	target_link_libraries(csv-sql ${LIBFL_LIBRARIES})
+	target_link_libraries(csv-grep-sql ${LIBFL_LIBRARIES})
+	target_link_libraries(csv-add-sql ${LIBFL_LIBRARIES})
 
 	target_link_libraries(csv-sql csvrpn)
 	target_link_libraries(csv-grep-sql csvrpn)
 	target_link_libraries(csv-add-sql csvrpn)
-else()
-	message(WARNING "bison or flex not found. csv-sql, csv-grep-sql and csv-add-sql won't be built.")
 endif()
 
 if(LIBPROCPS_FOUND)
@@ -327,7 +337,7 @@ if(PANDOC)
 	gen1_doc(add-rev)
 	gen1_doc(add-rpn)
 	gen1_doc(add-split)
-if (BISON_FOUND AND FLEX_FOUND)
+if (BUILD_SQL)
 	gen1_doc(add-sql)
 endif()
 	gen1_doc(add-substring)
@@ -339,7 +349,7 @@ endif()
 	gen1_doc(exec)
 	gen1_doc(grep)
 	gen1_doc(grep-rpn)
-if (BISON_FOUND AND FLEX_FOUND)
+if (BUILD_SQL)
 	gen1_doc(grep-sql)
 endif()
 	gen1_doc(group-members)
@@ -358,7 +368,7 @@ if(LIBPROCPS_FOUND)
 endif()
 	gen1_doc(show)
 	gen1_doc(sort)
-if (BISON_FOUND AND FLEX_FOUND)
+if (BUILD_SQL)
 	gen1_doc(sql)
 endif()
 if(SQLITE3_FOUND)
