Don't link against libfl.
It's actually not needed for anything.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,17 +203,12 @@ endif()
 
 find_package(BISON)
 find_package(FLEX)
-if(PKG_CONFIG_FOUND)
-	pkg_check_modules(LIBFL libfl)
-else()
-	find_package(LIBFL)
-endif()
 
-if (BISON_FOUND AND FLEX_FOUND AND LIBFL_FOUND)
+if (BISON_FOUND AND FLEX_FOUND)
 	set(BUILD_SQL 1)
 else()
 	set(BUILD_SQL 0)
-	message(WARNING "bison, flex or libfl not found. csv-sql, csv-grep-sql and csv-add-sql won't be built.")
+	message(WARNING "bison or flex not found. csv-sql, csv-grep-sql and csv-add-sql won't be built.")
 endif()
 
 if (BUILD_SQL)
@@ -247,10 +242,6 @@ if (BUILD_SQL)
 	target_include_directories(csv-sql PRIVATE src)
 	target_include_directories(csv-grep-sql PRIVATE src)
 	target_include_directories(csv-add-sql PRIVATE src)
-
-	target_link_libraries(csv-sql ${LIBFL_LIBRARIES})
-	target_link_libraries(csv-grep-sql ${LIBFL_LIBRARIES})
-	target_link_libraries(csv-add-sql ${LIBFL_LIBRARIES})
 
 	target_link_libraries(csv-sql csvrpn)
 	target_link_libraries(csv-grep-sql csvrpn)
