--- a/.github/workflows/buildlite.yml
+++ b/.github/workflows/buildlite.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: install necessary packages
+      run: sudo apt install build-essential cmake pkg-config
     - name: remove optional dependencies
       run: sudo apt remove flex bison libsqlite3-dev libprocps-dev libncursesw5-dev libmnl-dev pandoc tmux
     - name: create build directory
