--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,6 +149,7 @@ build_tool(csv-ls		src/ls.c src/usr-grp-query.c src/merge_utils.c)
 build_tool(csv-min		src/min.c)
 build_tool(csv-max		src/max.c)
 build_tool(csv-merge		src/merge.c)
+build_tool(csv-plot		src/plot.c)
 build_tool(csv-sort		src/sort.c)
 build_tool(csv-sum		src/sum.c)
 build_tool(csv-tac		src/tac.c)
