--- a/.github/workflows/buildlite.yml
+++ b/.github/workflows/buildlite.yml
@@ -12,7 +12,7 @@ jobs:
     - name: install necessary packages
       run: sudo apt install build-essential cmake pkg-config
     - name: remove optional dependencies
-      run: sudo apt remove flex bison libsqlite3-dev libprocps-dev libncursesw5-dev libmnl-dev pandoc tmux
+      run: sudo apt remove flex bison libsqlite3-dev libprocps-dev libncursesw5-dev libmnl-dev pandoc tmux gnuplot gnuplot-qt
     - name: create build directory
       run: mkdir build
     - name: configure
