--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,7 +12,7 @@ jobs:
     - name: update package lists
       run: sudo apt update
     - name: install dependencies
-      run: sudo apt install build-essential cmake pkg-config flex bison libsqlite3-dev libprocps-dev libncursesw5-dev libmnl-dev tmux
+      run: sudo apt install build-essential cmake pkg-config flex bison libsqlite3-dev libprocps-dev libncursesw5-dev libmnl-dev tmux gnuplot
     - name: create build directory
       run: mkdir build
     - name: configure
