diff: don't build if C11 threads.h is not available

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
 	set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "RelWithDebInfo" "MinSizeRel")
 endif (NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
 
+include(CheckCSourceCompiles)
 include(FindThreads)
 include(GNUInstallDirs)
 
@@ -118,7 +119,6 @@ build_tool(csv-avg		src/avg.c)
 build_tool(csv-cat		src/cat.c)
 build_tool(csv-count		src/count.c)
 build_tool(csv-cut		src/cut.c)
-build_tool(csv-diff		src/diff.c)
 build_tool(csv-env		src/env.c src/merge_utils.c)
 build_tool(csv-exec		src/exec.c)
 build_tool(csv-grep		src/grep.c)
@@ -142,7 +142,11 @@ build_tool(csv-users		src/users.c src/usr-grp.c src/merge_utils.c)
 target_link_libraries(csv-add-rpn	csvrpn)
 target_link_libraries(csv-grep-rpn	csvrpn)
 
-target_link_libraries(csv-diff ${CMAKE_THREAD_LIBS_INIT})
+check_c_source_compiles("#ifdef __STDC_NO_THREADS__\n#error no threads\n#endif\nint main(){return 0;}" C11THREADS_FOUND)
+if (C11THREADS_FOUND)
+	build_tool(csv-diff		src/diff.c)
+	target_link_libraries(csv-diff ${CMAKE_THREAD_LIBS_INIT})
+endif()
 
 if(NCURSESW_FOUND)
 	if(${CMAKE_VERSION} VERSION_LESS "3.13.0")
@@ -333,7 +337,9 @@ endif()
 	gen1_doc(cat)
 	gen1_doc(count)
 	gen1_doc(cut)
+if (C11THREADS_FOUND)
 	gen1_doc(diff)
+endif()
 	gen1_doc(env)
 	gen1_doc(exec)
 	gen1_doc(grep)
