to-xml: add new tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,7 @@ build_tool(csv-sum		src/sum.c)
 build_tool(csv-tac		src/tac.c)
 build_tool(csv-tail		src/tail.c)
 build_tool(csv-to-html		src/to-html.c)
+build_tool(csv-to-xml		src/to-xml.c)
 build_tool(csv-uniq		src/uniq.c)
 build_tool(csv-users		src/users.c src/usr-grp.c src/merge_utils.c)
 
@@ -379,6 +380,7 @@ endif()
 	gen1_doc(tac)
 	gen1_doc(tail)
 	gen1_doc(to-html)
+	gen1_doc(to-xml)
 	gen1_doc(uniq)
 	gen1_doc(users)
 endif()
