printf: new tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,6 +137,7 @@ build_tool(csv-min		src/min.c)
 build_tool(csv-max		src/max.c)
 build_tool(csv-merge		src/merge.c)
 build_tool(csv-plot		src/plot.c)
+build_tool(csv-printf		src/printf.c)
 build_tool(csv-sort		src/sort.c)
 build_tool(csv-sum		src/sum.c)
 build_tool(csv-tac		src/tac.c)
@@ -339,6 +340,8 @@ endfunction()
 if(PANDOC)
 	add_custom_target(manpages ALL)
 	add_custom_target(manpages-html)
+	add_custom_target(html)
+	add_dependencies(html manpages-html)
 
 	gen_doc(nix-tools 7)
 	gen_doc(tables-tut 7)
@@ -380,6 +383,7 @@ if(LIBMNL_FOUND)
 	gen1_doc(netstat)
 endif()
 	gen1_doc(plot)
+	gen1_doc(printf)
 if(LIBPROCPS_FOUND)
 	gen1_doc(ps)
 	gen1_doc(pstree)
