--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,6 +136,7 @@ build_tool(csv-ls		src/ls.c src/usr-grp-query.c src/merge_utils.c)
 build_tool(csv-min		src/min.c)
 build_tool(csv-max		src/max.c)
 build_tool(csv-merge		src/merge.c)
+build_tool(csv-peek		src/peek.c)
 build_tool(csv-plot		src/plot.c)
 build_tool(csv-printf		src/printf.c)
 build_tool(csv-sort		src/sort.c)
@@ -382,6 +383,7 @@ endif()
 if(LIBMNL_FOUND)
 	gen1_doc(netstat)
 endif()
+	gen1_doc(peek)
 	gen1_doc(plot)
 	gen1_doc(printf)
 if(LIBPROCPS_FOUND)
