Add basic fault injection framework and test csv-tail with it.

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -16,7 +16,7 @@ jobs:
     - name: create build directory
       run: mkdir build
     - name: configure
-      run: cd build && cmake .. -DCMAKE_INSTALL_PREFIX=/tmp/csv-nix-tools-bin -DCMAKE_BUILD_TYPE=Debug -DCOVERAGE=ON
+      run: cd build && cmake .. -DCMAKE_INSTALL_PREFIX=/tmp/csv-nix-tools-bin -DCMAKE_BUILD_TYPE=Debug -DCOVERAGE=ON -DFAULT_INJECTION=ON
     - name: build
       run: cd build && make
     - name: install
